--- a/src/navbar.css
+++ b/src/navbar.css
@@ -19,6 +19,7 @@
     font-size: 20px;
 
     background-color: #D8A0A6;
+    font-family: 'FjallaOne', sans-serif, Arial;
 }
 
 .navbar-left:hover, .navbar-right:hover{
