--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,12 @@ input {
   color:#D8A0A6;
 }
 
+.introduction {
+  padding-bottom: 20px;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
 .row1 {
   display: flex;
   margin-top: 50px;
