--- a/src/form.css
+++ b/src/form.css
@@ -20,12 +20,16 @@ css file for the sign-up and log-in forms.
     font-size: 20px;
 }
   
-.input-field {
+.input-field, .review-field {
     display:block;
     font-size: 20px;
     border-radius: 15px;
     margin: auto;
     padding: 5px
+}
+
+.review-field {
+    min-height: 100px;
 }
   
 .input-submit {
